--- a/style.css
+++ b/style.css
@@ -177,9 +177,15 @@ body {
   width: 100%;
   padding: 1rem;
   display: flex;
-  flex-direction: column;
   gap: 2rem;
 }
+
+
+.main3 .container{
+  display: flex;
+  flex-direction: row-reverse;
+}
+
 
 .main2 .cards,
 .main3 .text,
@@ -189,6 +195,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  padding: 6rem 5rem;
 }
 
 .main2 .cards h3 {
@@ -258,6 +265,10 @@ body {
   border-radius: 2rem;
   color: white;
   padding: 6rem 3rem;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .main7 .container h1 {
@@ -301,10 +312,13 @@ footer {
 
 footer .container {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   gap: 2rem;
 }
-
+footer .allBlocks{
+  display: flex;
+  gap: 3rem;
+}
 footer .blocks {
   display: flex;
   flex-direction: column;
@@ -338,7 +352,7 @@ footer .terms span {
   justify-content: center;
   gap: 2rem;
 }
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
   #nav #mainNav {
     flex-direction: column;
     padding: 1rem 2rem;
@@ -403,4 +417,4 @@ footer .terms span {
   footer .terms span {
     flex-direction: column;
   }
-}
+} */
